# passage

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  deny.toml
.cargo/: audit.toml
.docs/: astro.config.mjs  package.json  pnpm-lock.yaml
.docs/public/.well-known/: security.txt
.docs/src/content/docs/: index.mdx
.docs/src/content/docs/adapters/: authentication.md  discovery-actions.md  index.md  status.md  target-discovery.md  target-strategy.md
.docs/src/content/docs/advanced/: cookies.md  custom-grpc-adapters.md  custom-grpc-adapters.mdx  grpc-adapters.mdx  localization.md  monitoring-and-metrics.md  observability.md  scaling.md  tracing.md
.docs/src/content/docs/customization/: adapter.md  config.md  customization.md  status-adapters.md  target-discovery-adapters.md  target-strategy-adapters.md
.docs/src/content/docs/overview/: architecture.md  authentication-and-encryption.md  comparison.md  comparison.mdx  customization.md  how-it-works.md  index.md  index.mdx  introduction.mdx  scaling.md  security.md
.docs/src/content/docs/reference/: configuration-reference.md  configuration.md  grpc-protocol.md
.docs/src/styles/: global.css
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  helm.yml  release.yml  rust.yml
.web/: .gitignore  comparison.md  index.md  package.json  pnpm-lock.yaml
.web/.vitepress/: config.mts
.web/.vitepress/theme/: custom.css
.web/docs/: config.md  index.md
.web/util/: config.ts
benches/: rate_limiter.rs
config/: default.toml  example.yaml  schema.json
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
packets/: Cargo.toml
packets/benches/: packets.rs  passage.rs
packets/src/: configuration.rs  handshake.rs  lib.rs  login.rs  reader.rs  status.rs  writer.rs
passage-adapters/: Cargo.toml  README.md
passage-adapters/agones/: Cargo.toml  README.md
passage-adapters/agones/crds/: install.yaml
passage-adapters/agones/src/: discovery_adapter.rs  error.rs  lib.rs  template.rs
passage-adapters/agones/tests/: integration.rs
passage-adapters/agones/tests/common/: gameserver.yaml  install.yaml  k3s.rs  mod.rs
passage-adapters/dns/: Cargo.toml  README.md
passage-adapters/dns/src/: discovery_adapter.rs  error.rs  lib.rs
passage-adapters/grpc/: Cargo.toml  README.md  build.rs
passage-adapters/grpc/proto/adapter/: adapter.proto  authentication.proto  discovery.proto  discovery_action.proto  localization.proto  status.proto
passage-adapters/grpc/src/: authentication_adapter.rs  discovery_action_adapter.rs  discovery_adapter.rs  error.rs  lib.rs  localization_adapter.rs  proto.rs  status_adapter.rs  strategy_adapter.rs
passage-adapters/http/: Cargo.toml  README.md
passage-adapters/http/src/: lib.rs  mojang_adapter.rs  status_adapter.rs
passage-adapters/src/: adapters.rs  backoff.rs  error.rs  lib.rs  metrics.rs
passage-adapters/src/authentication/: disabled.rs  fixed.rs  mod.rs
passage-adapters/src/discovery/: fixed.rs  mod.rs
passage-adapters/src/discovery_action/: full_filter.rs  meta_filter.rs  mod.rs  player_allow_filter.rs  player_block_filter.rs  player_fill_strategy.rs
passage-adapters/src/filter/: fixed.rs  meta.rs  mod.rs  option.rs  player.rs  player_allow.rs  player_block.rs
passage-adapters/src/localization/: fixed.rs  mod.rs
passage-adapters/src/status/: fixed.rs  mod.rs
passage-adapters/src/strategy/: any.rs  fixed.rs  mod.rs  player_fill.rs
passage-packets/: Cargo.toml  README.md
passage-packets/benches/: packets.rs
passage-packets/src/: codec.rs  configuration.rs  error.rs  handshake.rs  lib.rs  login.rs  metrics.rs  packet.rs  packet_stream.rs  reader.rs  status.rs  writer.rs
passage-packets/src/io/: codec.rs  mod.rs  reader.rs
passage-protocol/: Cargo.toml  README.md
passage-protocol/benches/: rate_limiter.rs
passage-protocol/src/: config.rs  connection.rs  cookie.rs  error.rs  lib.rs  listener.rs  localization.rs  metrics.rs  mojang.rs  rate_limiter.rs  routes.rs
passage-protocol/src/cookie/: auth.rs  error.rs  mod.rs  session.rs
passage-protocol/src/crypto/: cookie.rs  error.rs  mod.rs  stream.rs
passage-protocol/src/helper/: keep_alive.rs  mod.rs
passage-protocol/src/protocol/: config.rs  connection.rs  listener.rs  mod.rs
passage-protocol/tests/: integration.rs
passage-proxy/: Cargo.toml
passage-proxy/benches/: rate_limiter.rs
passage-proxy/src/: connection.rs  cookie.rs  metrics.rs  mojang.rs
passage-proxy/src/crypto/: error.rs  stream.rs
passage-proxy/tests/: integration.rs
proto/: resourcepack.proto
proto/adapter/: adapter.proto  discovery.proto  resourcepack.proto  strategy.proto
src/: authentication.rs  authentication_adapter.rs  cipher_stream.rs  config.rs  connection.rs  core.rs  discovery_adapter.rs  lib.rs  main.rs  metrics.rs  mojang.rs  protocol.rs  proxy_protocol.rs  rate_limiter.rs  server.rs  status.rs  status_adapter.rs  strategy_adapter.rs
src/adapter/: authentication.rs  discovery.rs  filter.rs  localization.rs  mod.rs  refresh.rs  status.rs  strategy.rs
src/adapter/resourcepack/: fixed.rs  grpc.rs  impackable.rs  mod.rs  none.rs
src/adapter/status/: fixed.rs  grpc.rs  http.rs  mod.rs  mongodb.rs  none.rs  simple.rs
src/adapter/target_selection/: agones.rs  fixed.rs  grpc.rs  mod.rs  none.rs
src/adapter/target_strategy/: any.rs  fixed.rs  grpc.rs  mod.rs  none.rs  player_fill.rs
src/config/: log_filter.rs  mod.rs
src/protocol/: configuration.rs  handshaking.rs  login.rs  mod.rs  status.rs
src/resource_pack_supplier/: mod.rs  none.rs  test.rs
src/status_supplier/: hidden.rs  mod.rs  none.rs  simple.rs
src/target_selector/: first.rs  fixed.rs  mod.rs  simple.rs
src/target_selector_strategie/: mod.rs
src/target_selector_strategy/: mod.rs  simple.rs
tests/: integration.rs
(+7 files in other folders)
