[workspace]
members = ["passage-adapters", "passage-protocol", "passage-packets", "passage-adapters/grpc", "passage-adapters/agones", "passage-adapters/http"]

[workspace.package]
version = "0.2.0"
repository = "https://github.com/scrayosnet/passage"
documentation = "https://passage.scrayos.net/docs"
homepage = "https://passage.scrayos.net"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
# workspace
passage-packets = { path = "passage-packets" }
passage-adapters = { path = "passage-adapters" }
passage-adapters-grpc = { path = "passage-adapters/grpc" }
passage-adapters-agones = { path = "passage-adapters/agones" }
passage-adapters-http = { path = "passage-adapters/http" }
passage-protocol = { path = "passage-protocol" }

# external
tokio = { version = "1.49" }
tokio-util = { version = "0.7" }
thiserror = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
rsa = { version = "0.10.0-rc.15" }
rand = { version = "0.10.0" }
num-bigint = { version = "0.4" }
sha1 = { version = "0.10" }
cfb8 = { version = "0.8" }
aes = { version = "0.8" }
config = { version = "0.15" }
sha2 = { version = "0.10" }
hmac = { version = "0.12" }
proxy-header = { version = "0.1.2", features = ["tokio"] }
criterion = { version = "0.8", features = ["async_tokio"] }
reqwest = { version = "0.13", features = ["json"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.32", features = ["metrics"] }
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31" }
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "metrics", "trace"] }
sentry = { version = "0.46", default-features = false }
sentry-tracing = { version = "0.46" }
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
prost = { version = "0.14" }
prost-types = { version = "0.14" }
tonic-build = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
kube = { version = "3.0", default-features = false }
k8s-openapi = { version = "0.27", default-features = false }
schemars = { version = "1.2", default-features = false }
futures-util = { version = "0.3", default-features = false }
fake = { version = "4.4" }
fastnbt = { version = "2.6.0" }

[package]
name = "passage"
description = "Minecraft Server Transfer Router"
authors = [
    "Joshua Dean Küpper <admin@joshua-kuepper.de>",
    "Paul Wagner <contact@paulwagner.dev>",
]
license = "MIT"
readme = "README.md"
keywords = ["minecraft", "opentelemetry", "monitoring", "package"]
categories = ["emulators", "network-programming"]
version.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
passage-adapters = { workspace = true }
passage-adapters-grpc = { workspace = true, optional = true }
passage-adapters-agones = { workspace = true, optional = true }
passage-adapters-http = { workspace = true, optional = true }
passage-protocol = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "io-util", "signal", "test-util"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
config = { workspace = true }

tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true, features = ["trace", "metrics"] }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
opentelemetry-otlp = { workspace = true, features = ["http-proto", "metrics", "trace"] }

sentry = { workspace = true, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls", "tower"], optional = true }
sentry-tracing = { workspace = true, optional = true }

[features]
default = ["sentry", "adapters-grpc", "adapters-agones", "adapters-http"]
sentry = ["dep:sentry", "dep:sentry-tracing"]
adapters-grpc = ["dep:passage-adapters-grpc"]
adapters-agones = ["dep:passage-adapters-agones"]
adapters-http = ["dep:passage-adapters-http"]

[package.metadata.cargo-machete]
ignored = ["tonic-prost", "tonic-build", "tonic-prost-build", "prost", "prost-types", "k8s-openapi"]
