[package]
name = "packets"
description = "Minecraft Server Packets for Passage"
version = "0.1.0"
authors = [
    "Joshua Dean Küpper <admin@joshua-kuepper.de>",
    "Paul Wagner <contact@paulwagner.dev>",
]
license = "MIT"
repository = "https://github.com/scrayosnet/passage"
readme = "../README.md"
documentation = "https://passage.scrayos.net/docs"
homepage = "https://passage.scrayos.net"
keywords = ["minecraft"]
categories = ["emulators", "network-programming"]
edition = "2024"
rust-version = "1.85.0"

[dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "signal"] }
thiserror = { version = "2.0" }
uuid = { version = "1.16", features = ["v4", "serde"] }
fake = { version = "4.3.0", features = ["derive", "uuid"] }
fastnbt = { git = "https://github.com/owengage/fastnbt", rev = "9e5f6d3c13c063d99bc6f01eabfbb1dd1e6f0fd2" }
serde_json = { version = "1.0.140" }

[dev-dependencies]
fake = { version = "4.3.0", features = ["derive", "uuid"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }

[features]
default = ["client", "server"]
client = []
server = []

[[bench]]
name = "passage"
harness = false
