[package]
name = "packets"
description = "Minecraft Server Packets for Passage"
version = "0.1.15"
authors = [
    "Joshua Dean Küpper <admin@joshua-kuepper.de>",
    "Paul Wagner <contact@paulwagner.dev>",
]
license = "MIT"
repository = "https://github.com/scrayosnet/passage"
readme = "../README.md"
documentation = "https://passage.scrayos.net/docs"
homepage = "https://passage.scrayos.net"
keywords = ["minecraft"]
categories = ["emulators", "network-programming"]
edition = "2024"
rust-version = "1.86.0"

[dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "signal"] }
thiserror = { version = "2.0" }
uuid = { version = "1.19", features = ["v4", "serde"] }
fake = { version = "4.4", features = ["derive", "uuid"] }
fastnbt = { version = "2.6.0" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }

[dev-dependencies]
fake = { version = "4.4", features = ["derive", "uuid"] }
criterion = { version = "0.8", features = ["async_tokio"] }

[features]
default = ["client", "server"]
client = []
server = []

[[bench]]
name = "packets"
harness = false
