[package]
name = "passage-packets"
description = "Minecraft Server Packets"
authors = [
    "Joshua Dean Küpper <admin@joshua-kuepper.de>",
    "Paul Wagner <contact@paulwagner.dev>",
]
license = "MIT"
readme = "README.md"
keywords = ["minecraft", "opentelemetry", "monitoring", "package"]
categories = ["emulators", "network-programming"]
version.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio-util = { workspace = true, features = ["codec"] }
opentelemetry = { workspace = true, features = ["metrics"] }
bytes = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
fake = { workspace = true, features = ["derive", "uuid"] }
fastnbt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
cfb8 = { version = "0.8" }
aes = { version = "0.9" }

[dev-dependencies]
fake = { workspace = true, features = ["derive", "uuid"] }
criterion = { workspace = true, features = ["async_tokio"] }

[features]
default = ["client", "server"]
client = []
server = []

[[bench]]
name = "packets"
harness = false
