[package]
name = "passage-protocol"
description = "Minecraft Server Transfer Protocol"
authors = [
    "Joshua Dean Küpper <admin@joshua-kuepper.de>",
    "Paul Wagner <contact@paulwagner.dev>",
]
license = "MIT"
readme = "README.md"
keywords = ["minecraft", "opentelemetry", "monitoring", "package"]
categories = ["emulators", "network-programming"]
version.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
passage-packets = { workspace = true }
passage-adapters = { workspace = true }

thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
proxy-header = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true, features = ["trace", "metrics"] }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
aes = { workspace = true }
cfb8 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "rate_limiter"
harness = false
