[package]
name = "passage-adapters-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
passage-adapters = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
uuid = { version = "1.20.0", features = ["v4"] }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
