[package]
name = "passage-adapters-http"
version = "0.1.0"
edition = "2024"

[dependencies]
passage-adapters = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
tokio-util = { workspace = true, features = ["rt"] }

reqwest = { workspace = true, features = ["json"] }

